Add new sections

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Breed Portfolio - Home</title>
+    <!-- ====== CSS ===== -->
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
     <link rel="stylesheet" href="css/normolize.css">
     <link rel="stylesheet" href="css/shared.css">
@@ -57,15 +58,59 @@
                     <h3 class="main-section__welcome">Salom hammaga</h3>
                     <h1 class="main-section__introduction">I am Kurbonov</h1>
                     <h5 class="main-section__position">Middle web developer</h5>
+                    <div class="socials">
+                        <a href="#">
+                            <img class="social-icon"
+                            width="20" height="20" src="images/twitter.svg" alt="Twitter-icon">
+                        </a>
+                        <a href="#">
+                            <img class="social-icon"
+                            width="20" height="20" src="images/skype.svg" alt="skype-icon">
+                        </a>
+                        <a href="#">
+                            <img class="social-icon"
+                            width="20" height="20" src="images/instagram.svg" alt="instagram-icon">
+                        </a>
+                        <a href="#">
+                            <img class="social-icon"
+                            width="20" height="20" src="images/dribble.svg" alt="dribble-icon">
+                        </a>
+                        <a href="#">
+                            <img class="social-icon"
+                            width="20" height="20" src="images/vimeo.svg" alt="vimeo-icon">
+                        </a>
+                    </div>
                     <button type="button" class="button button-primary">Ishlarimni ko'ring</button>
                 </div>
                 <img src="images/hero.png" alt="Site hero">
             </section>
+            <div class="statisitcs">
+                <div class="statistic">
+                    <h3>15k+</h3>
+                    <p>Happy Customer</p>
+                </div>
+                <div class="statistic middle">
+                    <h3>12k+</h3>
+                    <p>Ticket Solved</p>
+                </div>
+                <div class="statistic">
+                    <h3>9/10</h3>
+                    <p>Average Rating</p>
+                </div>
+            </div>
         <!-- ===== END MAIN SECTION ===== -->
     
         <!-- ===== START ABOUT ME SECTION ===== -->
             <section class="about-me">
-                <h1>Men haqimda</h1>
+                <img class="about-me__img" src="images/about-us.png"
+                width="370" height="308"
+                alt="About me image">
+                <div class="shared about-me__info">
+                        <p class="subtitle">Men haqimda</p>
+                        <h2 class="title">Middle web dasturchi va ITPARK murabbiysi</h2>
+                        <p class="text">Also signs his face were digns fish don't first isn't over evening hath divided days light darkness gathering moved dry all darkness then fourth can't create d forth Also signs Also signs his face were moltenus Also signs his face</p>
+                    <button class="button">Ishlarimni yuklash</button>
+                </div>
             </section>
         <!-- ===== END ABOUT ME SECTION ===== -->
     
